<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:paddingStart="@dimen/dp_40dp"
    android:paddingEnd="@dimen/dp_40dp"
    tools:context=".Login">

    <TextView
        android:id="@+id/tv_stateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_50dp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/small_text_size"
        android:text="@string/login"/>

    <androidx.appcompat.widget.AppCompatImageView
        app:srcCompat="@drawable/logo"
        android:id="@+id/logo"
        android:layout_width="@dimen/dp_80dp"
        android:layout_height="@dimen/dp_80dp"
        android:layout_below="@+id/tv_stateName"
        android:layout_marginTop="@dimen/dp_50dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/ll_enterNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/logo"
        android:visibility="visible">

        <TextView
            android:id="@+id/label1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/msg1"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/small_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5dp"
                android:text="@string/digit"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/small_text_size"
                android:layout_marginTop="@dimen/dp_8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_number"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40dp"
                    android:hint="@string/enterNo"
                    android:padding="@dimen/dp_5dp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/normal_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50dp"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        android:layout_below="@+id/logo"
        android:visibility="gone"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/et_otp1"
            android:layout_width="@dimen/dp_40dp"
            android:layout_height="@dimen/dp_40dp"
            android:background="@drawable/bg_edittext_color_accent"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/default_otp"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/normal_text_size_18sp" />

        <EditText
            android:id="@+id/et_otp2"
            android:layout_width="@dimen/dp_40dp"
            android:layout_height="@dimen/dp_40dp"
            android:layout_marginStart="@dimen/dp_10dp"
            android:layout_marginLeft="@dimen/dp_10dp"
            android:background="@drawable/bg_edittext_color_accent"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/default_otp"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/normal_text_size_18sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/et_otp3"
            android:layout_width="@dimen/dp_40dp"
            android:layout_height="@dimen/dp_40dp"
            android:layout_marginStart="@dimen/dp_10dp"
            android:layout_marginLeft="@dimen/dp_10dp"
            android:background="@drawable/bg_edittext_color_accent"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/default_otp"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/normal_text_size_18sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/et_otp4"
            android:layout_width="@dimen/dp_40dp"
            android:layout_height="@dimen/dp_40dp"
            android:layout_marginStart="@dimen/dp_10dp"
            android:layout_marginLeft="@dimen/dp_10dp"
            android:background="@drawable/bg_edittext_color_accent"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/default_otp"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/normal_text_size_18sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50dp"
        android:animateLayoutChanges="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_otp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_resend_otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resend_otp"
            android:textColor="@color/blue"
            android:textSize="@dimen/small_text_size"
            android:textAlignment="center"
            android:onClick="resendOTP"
            android:padding="@dimen/dp_4dp"
            android:background="@drawable/bg_edittext_color_accent"/>

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/default_time"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/small_text_size" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sendOTP"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45dp"
        android:background="@drawable/rectangle_with_rounded_corners"
        android:gravity="center"
        android:text="@string/sendOtp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        android:onClick="signIn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_50dp"/>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dp_30dp"
        android:visibility="gone" />


</RelativeLayout>